--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<StoreManagement.Models.Entities.User>
+﻿@using StoreManagement.Models.Entities
+@model StoreManagement.Models.ViewModel.User.UserPageViewModel
 
 @{
     ViewData["Title"] = "Quản lý Tài khoản";
@@ -13,16 +14,20 @@
         <!-- Thanh lọc bên trái -->
         <div class="d-flex flex-wrap gap-2 align-items-center flex-grow-1">
             <!-- Lọc theo vai trò -->
-            <select class="form-select form-select-sm" style="width: 150px;" id="roleFilter">
+            <select id="roleFilter" class="form-select form-select-sm" style="width: 150px;">
                 <option value="">Tất cả vai trò</option>
-                <option value="admin">Admin</option>
-                <option value="staff">Staff</option>
-            </select>
 
+                @foreach (var r in Enum.GetValues(typeof(Role)))
+                {
+                    <option value="@r" selected="@(Model.Role == (Role)r ? "selected" : null)">
+                        @r
+                    </option>
+                }
+            </select>
             <!-- Ô tìm kiếm -->
             <div class="input-group input-group-sm" style="width: 300px;">
                 <input type="text" class="form-control" placeholder="Nhập họ tên, tên đăng nhập" id="searchInput">
-                <button class="btn btn-primary btn-search" type="button">
+                <button class="btn btn-primary btn-search" type="button" id="searchBtn">
                     <i class="bi bi-search"></i>
                 </button>
             </div>
@@ -47,9 +52,9 @@
                     </tr>
                     </thead>
                     <tbody id="accountTableBody">
-                    @if (Model != null & Model.Any())
+                    @if (Model.Users != null & Model.Users.Any())
                     {
-                        foreach (var item in Model)
+                        foreach (var item in Model.Users)
                         {
                             var
                             roleBackgroundColor = item.Role.ToString() == "Admin" ? "#0d6efd1a" : "#ffc1071a";
@@ -98,19 +103,9 @@
                 </table>
             </div>
             <!-- Phân trang-->
-            <nav class="mt-3">
-                <ul class="pagination justify-content-center modern-pagination-light">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">&laquo;</a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">&raquo;</a>
-                    </li>
-                </ul>
-            </nav>
+            <div id="paginationContainer">
+                @await Html.PartialAsync("Pagination", (object)Model)
+            </div>
         </div>
     </div>
 </div>
