--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StoreManagement.Models.Entities.Category>
+﻿@model StoreManagement.Models.ViewModel.Category.CategoryPageViewModel
 
 @{
     ViewData["Title"] = "Quản lý Loại sản phẩm";
@@ -36,9 +36,9 @@
                     </tr>
                     </thead>
                     <tbody id="categoryTableBody">
-                    @if (Model != null && Model.Any())
+                    @if (Model.Categories != null && Model.Categories.Any())
                     {
-                        foreach (var item in Model)
+                        foreach (var item in Model.Categories)
                         {
                             <tr class="text-center" data-id="@item.CategoryId">
                                 <td>@($"LSP{item.CategoryId}")</td>
@@ -70,19 +70,9 @@
                 </table>
             </div>
             <!-- Phân trang-->
-            <nav class="mt-3">
-                <ul class="pagination justify-content-center modern-pagination-light">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">&laquo;</a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">&raquo;</a>
-                    </li>
-                </ul>
-            </nav>
+            <div id="paginationContainer">
+                @await Html.PartialAsync("Pagination", (object)Model)
+            </div>
         </div>
     </div>
 </div>
