--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<StoreManagement.Models.Entities.Customer>
+﻿@model StoreManagement.Models.ViewModel.Customer.CustomerPageViewModel
 @{
     ViewData["Title"] = "Quản lý khách hàng";
 }
@@ -42,59 +42,49 @@
                     </tr>
                     </thead>
                     <tbody id="customerTableBody">
-                    @if (Model != null && Model.Any())
-                    {
-                        foreach (var customer in Model)
+                        @if (Model.Customers != null && Model.Customers.Any())
                         {
-                            <tr class="text-center">
-                                <td class="text-center">@customer.CustomerId</td>
-                                <td>@customer.Name</td>
-                                <td>@customer.Phone</td>
-                                <td>@customer.Email</td>
-                                <td class="text-center">
-                                    <button class="btn btn-sm btn-light border me-1 btn-view" title="Xem"
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#customerModal"
-                                            data-id="@customer.CustomerId">
-                                        <i class="bi bi-eye text-primary"></i>
-                                    </button>
-                                    <button class="btn btn-sm btn-light border me-1 btn-edit" title="Sửa"
-                                            data-bs-toggle="modal" 
-                                            data-bs-target="#customerModal"
-                                            data-id="@customer.CustomerId">
-                                        <i class="bi bi-pencil text-success"></i>
-                                    </button>
-                                    <button class="btn btn-sm btn-light border btn-delete" title="Xóa"
-                                            data-id="@customer.CustomerId">
-                                        <i class="bi bi-trash text-danger"></i>
-                                    </button>
-                                </td>
+                            foreach (var customer in Model.Customers)
+                            {
+                                <tr class="text-center">
+                                    <td class="text-center">@customer.CustomerId</td>
+                                    <td>@customer.Name</td>
+                                    <td>@customer.Phone</td>
+                                    <td>@customer.Email</td>
+                                    <td class="text-center">
+                                        <button class="btn btn-sm btn-light border me-1 btn-view" title="Xem"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#customerModal"
+                                                data-id="@customer.CustomerId">
+                                            <i class="bi bi-eye text-primary"></i>
+                                        </button>
+                                        <button class="btn btn-sm btn-light border me-1 btn-edit" title="Sửa"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#customerModal"
+                                                data-id="@customer.CustomerId">
+                                            <i class="bi bi-pencil text-success"></i>
+                                        </button>
+                                        <button class="btn btn-sm btn-light border btn-delete" title="Xóa"
+                                                data-id="@customer.CustomerId">
+                                            <i class="bi bi-trash text-danger"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                        else
+                        {
+                            <tr>
+                                <td colspan="5" class="text-center">Không có dữ liệu</td>
                             </tr>
                         }
-                    }
-                    else
-                    {
-                        <tr>
-                            <td colspan="5" class="text-center">Không có dữ liệu</td>
-                        </tr>
-                    }
                     </tbody>
                 </table>
             </div>
             <!-- Phân trang-->
-            <nav class="mt-3">
-                <ul class="pagination justify-content-center modern-pagination-light">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">&laquo;</a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">&raquo;</a>
-                    </li>
-                </ul>
-            </nav>
+            <div id="paginationContainer">
+                @await Html.PartialAsync("Pagination", (object)Model)
+            </div>
         </div>
     </div>
 </div>
